# labs

./: CMakeLists.txt
include/: client.h  console.h  deal.h  file.h
src/: console.c  main.c
src/repository/: client.c  deal.c  file.c
